fixed hero spacing

--- a/new_custom.css
+++ b/new_custom.css
@@ -140,7 +140,7 @@ footer {
 	background-color: #0a2243;
 }
 .footer h4,p {
-    color: #A5CC6B;
+    color: #ffffff;
 }
 #yellowtext {
 	color: #f7ce16;
@@ -213,7 +213,7 @@ footer {
   /* needed to prevent janky scrolling in Safari*/
   backface-visibility: hidden;
   /*//100% height of the viewport */
-	height: 110vh;
+	height: 100vh;
 	overflow: hidden;
 	position: relative !important;
 	width: 100%;
@@ -230,4 +230,9 @@ footer {
   left: 10% !important;
   /*bottom: 10%;
   right: 10%;*/
+}
+section {
+	padding: 0rem;
+	margin: 0rem;
+	overflow: auto;
 }
